<resources>
    <string name="app_name">P2EF_VivianaMardones</string>
    <string name="etMedidor">Register</string>
    <string name="tvTitulo">Register type</string>
    <string name="etFecha">Date</string>
    <string name="tvTipoMedidor">Register of:</string>
    <string name="rbAgua">Water</string>
    <string name="rbLuz">Electricity</string>
    <string name="btnRegistrar">Record</string>
    <string name="rbGas">Gas</string>
    <string name="btnAdd">Add new Register</string>
</resources>