<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- EditText para el registro del medidor -->
    <!-- EditText para la fecha -->

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvTitulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMedidor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/etMedidor"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/etFecha"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMedidor"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/tvTipoMedidor"
        android:layout_width="65dp"
        android:layout_height="17dp"
        android:layout_marginTop="44dp"
        android:text="@string/tvTipoMedidor"
        app:layout_constraintStart_toStartOf="@+id/etFecha"
        app:layout_constraintTop_toBottomOf="@+id/etFecha"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/rgTipoMedidor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/etFecha"
        app:layout_constraintTop_toBottomOf="@id/tvTipoMedidor"
        app:layout_constraintWidth_percent="0.5">

        <RadioButton
            android:id="@+id/rbAgua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbAgua" />

        <RadioButton
            android:id="@+id/rbLuz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbLuz" />

        <RadioButton
            android:id="@+id/rbGas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbGas" />
    </RadioGroup>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/btnRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgTipoMedidor" />
</androidx.constraintlayout.widget.ConstraintLayout>